fix(DEV-FDS-365) ViewConfig scrolling
ViewConfig now does not extend out of the viewport and has scrolling

--- a/packages/cascara/src/private/ViewConfig/ViewConfig.module.scss
+++ b/packages/cascara/src/private/ViewConfig/ViewConfig.module.scss
@@ -1,4 +1,7 @@
+@use '~@espressive/cascara/styles' as *;
+
 ._ {
+  @include scroll-vertical;
   z-index: 11;
   font-size: 0.875em;
 
